<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_coinShop"
        android:icon="@drawable/baseline_local_grocery_store_24"
        android:title="@string/title_coinShop" />

    <item
        android:id="@+id/bmi_graph"
        android:icon="@drawable/baseline_fitness_center_24"
        android:title="@string/title_BMI" />
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_achievement"
        android:icon="@drawable/baseline_emoji_events_24"
        android:title="@string/title_achievement" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/title_profile" />

</menu>