<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="my.edu.tarc.bait2073mobileassignment.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_stepCounterFragment"
            app:destination="@id/navigation_stepCounter"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_coinShop"
        android:name="my.edu.tarc.bait2073mobileassignment.ui.coinShop.CoinShopFragment"
        android:label="@string/title_coinShop"
        tools:layout="@layout/fragment_coinshop" />

    <fragment
        android:id="@+id/navigation_achievement"
        android:name="my.edu.tarc.bait2073mobileassignment.ui.achievement.AchievementFragment"
        android:label="@string/title_achievement"
        tools:layout="@layout/fragment_achievement" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="my.edu.tarc.bait2073mobileassignment.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <navigation android:id="@+id/bmi_graph"
        app:startDestination="@id/navigation_BMI">
        <fragment
            android:id="@+id/nutritionAdviceFragment"
            android:name="my.edu.tarc.bait2073mobileassignment.ui.bmi.NutritionAdviceFragment"
            android:label="fragment_nutrition_advice"
            tools:layout="@layout/fragment_nutrition_advice" />
        <fragment
            android:id="@+id/navigation_BMI"
            android:name="my.edu.tarc.bait2073mobileassignment.ui.bmi.BMIFragment"
            android:label="@string/title_BMI"
            tools:layout="@layout/fragment_bmi">
            <action
                android:id="@+id/action_navigation_BMI_to_navigation_BMI_result"
                app:destination="@id/navigation_BMI_result" />
            <action
                android:id="@+id/action_navigation_BMI_to_navigation_BMI_history"
                app:destination="@id/navigation_BMI_history"
                app:popUpTo="@id/navigation_BMI" />
        </fragment>
        <fragment
            android:id="@+id/navigation_BMI_result"
            android:name="my.edu.tarc.bait2073mobileassignment.ui.bmi.BMIResultFragment"
            tools:layout="@layout/fragment_bmi_result">
            <action
                android:id="@+id/action_navigation_BMI_result_to_navigation_BMI"
                app:destination="@id/navigation_BMI"/>
            <action
                android:id="@+id/action_navigation_BMI_result_to_navigation_BMI_history"
                app:destination="@id/navigation_BMI_history"
                app:popUpTo="@id/navigation_BMI_result" />
            <action
                android:id="@+id/action_navigation_BMI_result_to_nutritionAdviceFragment"
                app:destination="@id/nutritionAdviceFragment"
                app:popUpTo="@id/navigation_BMI_result" />
        </fragment>
        <fragment
            android:id="@+id/navigation_BMI_history"
            android:name="my.edu.tarc.bait2073mobileassignment.ui.bmi.BMIHistoryFragment"
            tools:layout="@layout/fragment_bmi_history"/>
    </navigation>
    <fragment
        android:id="@+id/navigation_stepCounter"
        android:name="my.edu.tarc.bait2073mobileassignment.ui.home.StepCounterFragment"
        android:label="fragment_step_counter"
        tools:layout="@layout/fragment_step_counter">
        <action
            android:id="@+id/action_navigation_stepCounter_to_navigation_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="true"/>
    </fragment>

</navigation>