<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.bmi.BMIFragment">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/bmi_title"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/maleBtn"
        android:layout_width="150dp"
        android:layout_height="175dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/purple_700"
        android:drawableTop="@drawable/baseline_male_100"
        android:text="@string/male"
        android:textAllCaps="true"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/femaleBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/femaleBtn"
        android:layout_width="150dp"
        android:layout_height="175dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/purple_700"
        android:drawableTop="@drawable/baseline_female_100"
        android:text="@string/female"
        android:textAllCaps="true"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/maleBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/maleBtn"
        app:layout_constraintTop_toTopOf="@+id/maleBtn" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/purple_700"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/femaleBtn"
        app:layout_constraintStart_toStartOf="@+id/maleBtn"
        app:layout_constraintTop_toBottomOf="@+id/femaleBtn">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/height"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#00FFFFFF"
                android:ems="2"
                android:hint="@string/height"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cm"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="28sp" />
        </LinearLayout>

        <!--
        thumb is the circle of the slider
        -->
        <com.google.android.material.slider.Slider
            android:id="@+id/heightSlider"
            android:layout_width="338dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/height"
            android:labelFor="@id/editTextHeight"
            android:value="170"
            android:valueFrom="1"
            android:valueTo="200"
            app:thumbColor="@color/bmi_color"
            app:thumbRadius="15dp"
            app:trackColorActive="@color/bmi_color"
            app:trackColorInactive="@color/white"
            app:trackHeight="10dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="150dp"
        android:layout_height="170dp"
        android:layout_marginTop="8dp"
        android:background="@color/purple_700"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/weightLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/weight"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#00FFFFFF"
                android:ems="2"
                android:hint="@string/weight"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kg"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="28sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/minusWeightBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:padding="0dp"
                android:text="@string/minus_sign"
                android:textSize="30sp" />

            <Button
                android:id="@+id/plusWeightBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:padding="0dp"
                android:text="@string/plus_sign"
                android:textSize="30sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="150dp"
        android:layout_height="165dp"
        android:background="@color/purple_700"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/age"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/editTextAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:ems="2"
            android:hint="@string/age"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="28sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/minusAgeBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:padding="0dp"
                android:text="@string/minus_sign"
                android:textSize="30sp" />

            <Button
                android:id="@+id/plusAgeBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:padding="0dp"
                android:text="@string/plus_sign"
                android:textSize="30sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnCalculateBMI"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/bmi_color"
        android:letterSpacing="0.03"
        android:text="@string/calculate"
        android:textAllCaps="true"
        android:textSize="32sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <Button
        android:id="@+id/btnBMIHistory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/bmi_color"
        android:letterSpacing="0.03"
        android:text="@string/bmi_history"
        android:textAllCaps="true"
        android:textSize="32sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/btnCalculateBMI"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnCalculateBMI"
        app:layout_constraintTop_toBottomOf="@+id/btnCalculateBMI" />

</androidx.constraintlayout.widget.ConstraintLayout>